--- a/PersonalizarDispositivos/PersonalizarDispositivos/PersonalizarDispositivos.csproj
+++ b/PersonalizarDispositivos/PersonalizarDispositivos/PersonalizarDispositivos.csproj
@@ -20,7 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Styles\estilos.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EstilosExternos.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PaginaEstilosCSS.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
