--- a/PersonalizarDispositivos/PersonalizarDispositivos/PersonalizarDispositivos.csproj
+++ b/PersonalizarDispositivos/PersonalizarDispositivos/PersonalizarDispositivos.csproj
@@ -29,5 +29,8 @@
     <EmbeddedResource Update="Views\PaginaEstilosCSS.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PaginaGrid.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
